# pdf-ocr-streamlit

./: .gitignore  README.md  app.py  main.py  pdf2markdown.py  pyproject.toml
