[project]
name = "pdf-ocr-streamlit"
version = "0.1.0"
description = "Streamlit app to OCR PDFs using a local Ollama multimodal model and browse results."
authors = [{ name = "Bjorn Melin", email = "bjornmelin16@gmail.com" }]
requires-python = ">=3.9"
license = { text = "MIT" }
readme = "README.md"
dependencies = [
    "ollama>=0.4.7",
    "ollama-ocr>=0.1.6",
    "pillow>=11.1.0",
    "pymupdf>=1.25.5",
    "streamlit>=1.44.1",
]

[project.urls]
Homepage = "https://github.com/BjornMelin/pdf-ocr-streamlit"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"